Handle top level StaleConfig errors in batch_write_op

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0, 8.0.20, 7.0.32
    • Affects Version/s: 7.0.30, 8.0.19
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • v8.0, v7.0
    • CAR Team 2025-07-21, CAR Team 2025-08-18
    • 🟩 Routing and Topology
    • None
    • None
    • None
    • None
    • None
    • None

      The BatchWriteOp does not properly handle top level StaleConfig errors returned by the shard.
       
      I've discovered this as part of a refectoring attempt, in which I modified where we perform the collection acquisition by the shard during an insert operation, moving it some layers higher up. This change introduces the possibility of a StaleConfig exception being thrown much earlier in the write path on the shard (specifically, at this point).

            Assignee:
            Silvia Surroca
            Reporter:
            Tommaso Tocci
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: