SERVER-107482 Handle top level StaleConfig errors in batch_write_op (#39525)

Co-authored-by: Tommaso Tocci <tommaso.tocci@mongodb.com>
GitOrigin-RevId: 806b8c45e4682359f4618bf7e39cda21bf303bd6