src/mongo/s/write_ops/batch_write_op.h
@@ -163,7 +163,8 @@ public:
      */
     void noteBatchError(const TargetedWriteBatch& targetedBatch,
                         const write_ops::WriteError& error,
-                        const WriteConcernErrorDetail* wce = nullptr);
+                        const WriteConcernErrorDetail* wce = nullptr,
+                        TrackedErrors* trackedErrors = nullptr);
 
     /**
      * Aborts any further writes in the batch with the provided error.  There must be no pending
